--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.10.1
   modal_progress_hud_nsn: ^0.4.0
   cloud_firestore: ^4.11.0
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
